# nonebot-plugin-mcqq

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: ------.md  bug.md  bug_report.yml  enhancement.md  enhancement_report.yml  test_enhancement.yml
.github/actions/setup-python/: action.yml
.github/workflows/: codecov.yml  push_pypi.yml  release.yml  ruff.yml
forge_server/src/main/java/com/scareye/mcqq/: FileWatcher.java  Ws.java
minecraft_plugin/src/main/java/com/scareye/mcqq/: EventProcessor.java  MC_QQ.java  Ws.java
minecraft_plugin/src/main/resources/: plugin.yml
minecraft_server/: pom.xml
minecraft_server/src/com/scareye/mcqq/: ConfigReader.java  FileWatcher.java  MC_QQ.java  Utils.java  WSClient.java  Ws.java
minecraft_server/src/java/com/scareye/mcqq/: ConfigReader.java  FileWatcher.java  MC_QQ.java  Utils.java  WSClient.java
minecraft_server/src/main/java/com/github/theword/: ConfigReader.java  FileWatcher.java  MCQQ.java  Utils.java  WSClient.java
minecraft_server/src/main/java/com/github/theword/event/: MinecraftEvent.java  MinecraftMessageEvent.java  MinecraftNoticeEvent.java  MinecraftPlayer.java  MinecraftPlayerChatEvent.java  MinecraftPlayerJoinEvent.java  MinecraftPlayerQuitEvent.java
minecraft_server/src/main/java/com/scareye/mcqq/: FileWatcher.java  MC_QQ.java
minecraft_server/src/main/resources/: assembly.xml  config.yml
minecraft_server/src/resource/: config.yml
msg_qq/: __init__.py  data_source.py
nonebot_plugin_mcqq/: __init__.py  bot_manage.py  config.py  data_source.py  minecraft_msg.py  on_minecraft_msg.py  on_qq_msg.py  qq_msg.py  utils.py
nonebot_plugin_mcqq/utils/: __init__.py  draw_result.py  link_data_manager.py  parse_qq_msg.py  qq_util.py  rule.py  send_to_mc.py  send_to_qq.py
nonebot_plugin_mcqq_mcrcon/: __init__.py  data_source.py  utils.py
nonebot_plugin_msgqq/: __init__.py  data_source.py
nonebot_plugin_msqqq/: __init__.py  data_source.py
spigot_plugin/: pom.xml
spigot_plugin/src/main/java/com/scareye/mcqq/: ConfigReader.java  EventProcessor.java  MC_QQ.java  Utils.java  WSClient.java
spigot_plugin/src/main/java/com/scareye/mcqq/event/: SpigotAsyncPlayerChatEvent.java  SpigotEvent.java  SpigotMessageEvent.java  SpigotNoticeEvent.java  SpigotPlayer.java  SpigotPlayerCommandPreprocessEvent.java  SpigotPlayerDeathEvent.java  SpigotPlayerJoinEvent.java  SpigotPlayerQuitEvent.java
spigot_plugin/src/main/java/com/scareye/mcqq/returnBody/: ActionEvent.java  MinecraftReturnBody.java  MsgItem.java
spigot_plugin/src/main/resources/: config.yml  plugin.yml
tests/: conftest.py  test_bot_manage.py  test_on_minecraft_msg.py  test_on_qq_msg.py
